Fix tag icon position on mobile

--- a/_sass/_policy-guidance.scss
+++ b/_sass/_policy-guidance.scss
@@ -209,6 +209,11 @@ button.clear-results {
 			}
 		}
 	}
+	
+	.policy-tags .tag-icon {
+		margin-bottom: 10px;
+		top: 14px;
+	}
 }
 
 @media (min-width: 0px) and (max-width: 1023px) {
